@@ -284,6 +284,8 @@ static const char *_default_ecodefn(locale_t locale, uint32_t ecode) {
       return "Overflow. (IW_ERROR_OVERFLOW)";
     case IW_ERROR_INVALID_VALUE:
       return " Invalid value. (IW_ERROR_INVALID_VALUE)";
+    case IW_ERROR_UNEXPECTED_RESPONSE:
+      return "Unexpected response (IW_ERROR_UNEXPECTED_RESPONSE)";
     case IW_OK:
     default:
       return 0;
